# ai-pipeline-hub

./: README.md  hello.py  pyproject.toml  requirements.txt
app/: main.py
data/: company_profiles.csv  meetings.csv  user_profiles.csv
data/company_info/00ffb5e0-ca87-47d1-8b41-823381d090b2/: research_data.json
data/company_info/9dd08686-1ee0-4445-b5ce-eabccc926908/: research_data.json  research_data.md  summary.json  summary.md
data/company_info/aef70321-283a-48c3-9b74-2630470a6cfc/: research_data.json  research_data.md  summary.json  summary.md
data/company_info/bbd58d0b-9ae8-4414-bd11-d21fc7cfdc3b/: research_data.json  research_data.md  summary.json  summary.md
data/company_info/d8d0578a-f056-47ae-97b8-377ed476a6b5/: research_data.json  research_data.md
data/company_info/ed5b6a3d-8b02-4656-8f93-0ce84636ce2b/: research_data.json  research_data.md
data/company_info/fdf3b59c-350b-4fff-b9ed-bc4e6a6410f8/: research_data.json  research_data.md  summary.json  summary.md
data/company_info/test-file-company-456/: research_data.json  research_data.md
data/lin_profiles/1/: insights.json  insights.md  profile.json  profile.md
data/lin_profiles/2/: insights.json  insights.md  profile.json  profile.md
data/lin_profiles/3/: insights.json  insights.md  profile.json  profile.md
data/lin_profiles/4/: insights.json  insights.md  profile.json  (+1 more)
src/common/: __init__.py
tests/: test_api_endpoints.py  test_company_research.py  test_company_summary.py  test_comprehensive_data.py  test_functions_directly.py  test_linkedin_insights_service.py  test_meeting_service.py
(+37 files in other folders)
